# photoram

./: .gitignore  README.md  README_DEEP_HIERARCHY.md  README_DUAL_TREE.md  README_ONTOLOGY.md  ROADMAP.md  build_dual_tree_ontology.py  build_ontology_from_deep.py  constraints.txt  create_hierarchy.py  create_hierarchy_deep.py  create_hierarchy_photography.py  create_hierarchy_photography_multilevel.py  create_ontology.py  extract_tags.py  ontology.json  ontology_deep_hierarchy.json  ontology_dual_tree.json  plan.md  pyproject.toml  pytest.ini  tags.json  tags_hierarchical.json  view_dual_tree_ontology.py
.github/workflows/: ci.yml
darktable/: photoram.lua
src/photoram/: __init__.py  __main__.py  cli.py  cli.py.bak  errors.py  metadata.py  model.py  schemas.py  service.py  utils.py
src/photoram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_errors.py  test_metadata.py  test_model.py  test_schemas.py  test_service.py  test_utils.py
