[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoram"
version = "1.0.1"
description = "Modern CLI photo classifier powered by ImageNet-21K"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "lderek" }]
keywords = ["image-classification", "photo", "imagenet-21k", "deep-learning", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "huggingface-hub>=0.20",
    "rich>=13.0",
    "click>=8.0",
    "timm>=1.0",
]

[project.optional-dependencies]
metadata = ["pyexiv2>=2.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
]
all = ["pyexiv2>=2.8"]

[project.scripts]
photoram-cli = "photoram.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
